--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -24,4 +24,5 @@
 .project img {
     width: 250px;
     height: 250px;
+    object-fit: cover;
 }
